# Energy-Saver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _fix_pg.py  _setup_pg.py  check_db.py  device_simulator.py  docker-compose.dev.yml  docker-compose.yml  mosquitto_local.conf  mosquitto_passwd  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  requirements_streaming.txt  run_all.py  start.py
.github/workflows/: ci.yml
backend/: Dockerfile  _seed_energy.py  pyrightconfig.json  requirements.txt  run_server.py
backend/app/: database.py  dependencies.py  main.py  schemas.py
backend/app/models/: __init__.py  alert_model.py  building_model.py  device_model.py  energy_log_model.py  forecast_actual_model.py  subscription_model.py  tenant_model.py  user_model.py
backend/app/routers/: alerts_router.py  anomalies.py  appliance_router.py  auth.py  auth_router.py  bill_router.py  dashboard.py  energy_router.py  ev_router.py  finetune_router.py  forecast.py  forecast_actual_router.py  hvac.py  models.py  notification_router.py  pipeline.py  savings.py  settings_router.py  solar_router.py  tenant_router.py  ws_stream.py
backend/app/services/: anomaly_service.py  appliance_service.py  auth_service.py  bill_service.py  broker_simulator.py  data_service.py  db_service.py  email_scheduler.py  email_service.py  ev_service.py  forecast_actual_service.py  forecast_service.py  hvac_service.py  ml_loader.py  model_service.py  mqtt_simulator.py  pipeline_service.py  real_mqtt_service.py  savings_service.py  solar_service.py  tenant_anomaly_service.py
backend/app/utils/: jwt_utils.py
config/: __init__.py  logging_config.py  schemas.py  settings.py
data/: billing_data.csv  energy_consumption.csv  energy_saver.db  generate_data.py  occupancy_data.csv  solar_data.csv
deep_learning/: README.md  run_finetune.py
deep_learning/backbone/: energy_backbone.py
deep_learning/callbacks/: finetuning_callbacks.py
deep_learning/configs/: finetuning_config.json
deep_learning/fine_tuning/: finetune_manager.py
deep_learning/transfer/: pretrain.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Feedback.tsx  Layout.tsx  PageHeader.tsx  StatCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: usePolling.ts  useWebSocket.ts
frontend/src/pages/: AddTenant.tsx  AnomaliesPage.tsx  AppliancePage.tsx  BillPage.tsx  DashboardPage.tsx  EVPage.tsx  ForecastPage.tsx  ForecastVsActualPage.tsx  HVACPage.tsx  LoginPage.tsx  ModelsPage.tsx  MyUnitPage.tsx  PipelinePage.tsx  (+6 more)
ml_models/: model_3_occupancy.py  model_4_hvac.py  model_5_appliance_fingerprinting.py  model_8_bill_predictor.py
models/: anomaly_model.keras  anomaly_threshold.npy  bill_predictor_model.keras  bill_scaler_X.pkl  bill_scaler_y.pkl  ev_q_table.npy  fingerprinting_encoder.pkl  fingerprinting_model.keras  forecasting_model.keras  model_1_forecasting.py  model_2_anomaly.py  model_6_solar_forecast.py  model_7_ev_optimizer.py  occupancy_model.keras  occupancy_scaler.pkl  solar_model.keras  solar_scaler.pkl
models_storage/: anomaly_model.keras  anomaly_threshold.npy  bill_predictor_model.keras  ev_q_table.npy  fingerprinting_model.keras  forecasting_model.keras  occupancy_model.keras  solar_model.keras
outputs/: ev_charging_schedule.csv  hvac_daily_schedule.csv
streaming/: pipeline.py  stream_engine.py
streaming/alerts/: dispatcher.py
streaming/cloud/: Dockerfile  docker-compose.yml  mosquitto.conf
streaming/dashboard/: index.html
streaming/finetuning/: stream_finetuner.py
streaming/gcp/: docker-compose.gcp.yml  gcp_client.py
streaming/home_assistant/: ha_subscriber.py
streaming/inference/: hvac_stream.py  stream_inference.py
streaming/kafka/: kafka_stream.py
streaming/mqtt/: mqtt_client.py
streaming/rest_api/: poller.py
streaming/websocket/: ws_server.py
tests/: __init__.py  conftest.py  test_config.py  test_data_generation.py  test_helpers.py  test_metrics.py  test_routers.py  test_schemas.py  test_tariff.py
utils/: helpers.py
(+1 files in other folders)
