[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "energy-saver-ai"
version = "1.0.0"
description = "Production-grade AI system for smart energy management with real-time streaming, 8 ML models, and multi-cloud support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["energy", "ai", "iot", "machine-learning", "streaming", "smart-home"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]

dependencies = [
    "tensorflow>=2.13.0,<2.16",
    "scikit-learn>=1.3.0,<2.0",
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0,<4.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
streaming = [
    "aiokafka>=0.9.0",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]
aws = [
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
]
azure = [
    "azure-iot-hub>=2.6.0",
    "azure-eventhub>=5.11.0",
    "azure-storage-blob>=12.19.0",
]
gcp = [
    "google-cloud-pubsub>=2.19.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigtable>=2.22.0",
    "google-cloud-aiplatform>=1.42.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
all = [
    "energy-saver-ai[streaming,aws,gcp,azure,dev]",
]

[project.scripts]
energy-saver = "main:main"

[project.urls]
Homepage     = "https://github.com/your-org/energy-saver-ai"
Repository   = "https://github.com/your-org/energy-saver-ai"
Issues       = "https://github.com/your-org/energy-saver-ai/issues"
Changelog    = "https://github.com/your-org/energy-saver-ai/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where   = ["."]
include = ["config*", "ml_models*", "streaming*", "utils*", "deep_learning*", "data*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.isort]
known-first-party = ["config", "ml_models", "streaming", "utils", "deep_learning"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version    = "3.10"
strict            = false
ignore_missing_imports = true
warn_unused_ignores    = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short --cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source  = ["."]
omit    = ["tests/*", "data/generate_data.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
